# sanger-review-skill

./: .gitignore  README.md  pyproject.toml
examples/minimal/: config.yaml  manual_overrides.csv  targets.csv
sanger-review/: SKILL.md
sanger-review/agents/: openai.yaml
sanger-review/references/: calling_policy.md  input_formats.md
sanger-review/scripts/: plot_chromatogram.py  sanger_review.py
tests/: test_core.py
